--- a/package.json
+++ b/package.json
@@ -2,5 +2,13 @@
   "name": "comed-ui",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "serve":"parcel index.html --open"
+  },
+  "devDependencies": {
+    "node-sass": "^4.14.1",
+    "parcel-bundler": "^1.12.4",
+    "sass": "^1.26.10"
+  }
 }
