--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@carbon/grid": "^10.14.0",
     "@carbon/layout": "^10.12.0",
     "@carbon/themes": "^10.17.0",
+    "@popperjs/core": "^2.4.4",
+    "@sabasayer/utils": "^1.2.2",
     "carbon-components": "^10.18.0"
   }
 }
