--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "parcel ./src/**/*.html --open"
   },
   "devDependencies": {
-    "node-sass": "^4.14.1",
+    "dart-sass": "^1.25.0",
     "parcel-bundler": "^1.12.4",
     "sass": "^1.26.10"
   },
